ChangeLog for package rk.CohenKappa

changes in version 0.01-8 (2015-06-29)
unreleased:
  - this release is under devoplment

changes in version 0.01-7 (2015-03-14)
fixed:
  - replaced the outdated links to sourceforge with our new KDE URL

changes in version 0.01-6 (2015-03-13)
changed:
  - rebuilt using rkwarddev 0.07-1

changes in version 0.01-5 (2013-04-04)
added:
  - debianized the plugin
fixed:
  - removed erroneous pluginmap inclusions from XML files

changes in version 0.01-4 (2013-02-24)
changed:
  - updated rkwarddev generator script (compatibility with 0.06-2) and regenerated plugin code

changes in version 0.01-3 (2012-04-07)
changes:
  - added a ChangeLog file
  - rebuild package for R 2.15