@@ -4,54 +4,52 @@
 
 
 function preprocess(){
-	// add requirements etc. here
-	echo("require(psych)\n");
+  // add requirements etc. here
+  echo("require(psych)\n");
 }
 
 function calculate(){
-	// read in variables from dialog
+  // read in variables from dialog
 
-	var vrslDtmtrxr2 = getString("vrsl_Dtmtrxr2");
-	var vrslWghtmtrx = getString("vrsl_Wghtmtrx");
-	var spnNmbrfbsr = getString("spn_Nmbrfbsr");
-	var spnAlphvlfr = getString("spn_Alphvlfr");
-	var svbSvrsltst = getString("svb_Svrsltst");
+  var data = getString("data");
+  var dataWeight = getString("dataWeight");
+  var nobs = getString("nobs");
+  var alpha = getString("alpha");
+  var saveResults = getString("saveResults");
 
-	// the R code to be evaluated
-	echo("\tkappa.result <- cohen.kappa(");
-	if(vrslDtmtrxr2) {
-		echo("\n\t\tx=" + vrslDtmtrxr2);
-	}
-	if(vrslWghtmtrx) {
-		echo(",\n\t\tw=" + vrslWghtmtrx);
-	}
-	if(spnNmbrfbsr > 0) {
-		echo(",\n\t\tn.obs=" + spnNmbrfbsr);
-	}
-	if(spnAlphvlfr != 0.05) {
-		echo(",\n\t\talpha=" + spnAlphvlfr);
-	}
-	echo("\n\t)\n\n");
+  // the R code to be evaluated
+  echo("  kappa.result <- cohen.kappa(");
+  if(data) {
+    echo("\n    x=" + data);  
+  }
+  if(dataWeight) {
+    echo(",\n    w=" + dataWeight);  
+  }
+  if(nobs > 0) {
+    echo(",\n    n.obs=" + nobs);  
+  }
+  if(alpha != 0.05) {
+    echo(",\n    alpha=" + alpha);  
+  }
+  echo("\n  )\n\n");
 }
 
 function printout(){
-	// printout the results
-	new Header(i18n("Cohen's Kappa and weighted Kappa")).print();
+  // printout the results
+  new Header(i18n("Cohen's Kappa and weighted Kappa")).print();
 
-
-	echo("\trk.header(\"Correlation coefficients and confidence boundaries\", level=3)\n");
-	echo("\trk.print(kappa.result[[\"confid\"]])\n");
-	echo("\trk.print(paste(\"<b>Alpha level:</b>\", kappa.result[[\"plevel\"]]))\n");
-	echo("\trk.print(paste(\"<b>Number of subjects:</b>\", kappa.result[[\"n.obs\"]]))\n\n");
-	//// save result object
-	// read in saveobject variables
-	var svbSvrsltst = getValue("svb_Svrsltst");
-	var svbSvrsltstActive = getValue("svb_Svrsltst.active");
-	var svbSvrsltstParent = getValue("svb_Svrsltst.parent");
-	// assign object to chosen environment
-	if(svbSvrsltstActive) {
-		echo(".GlobalEnv$" + svbSvrsltst + " <- kappa.result\n");
-	}
+  new Header(i18n("Correlation coefficients and confidence boundaries"), 3).add(i18n("Alpha level"), getValue("alpha")).print();
+  echo("rk.print(kappa.result[[\"confid\"]])\n");
+  echo("rk.print(paste(\"Number of subjects: \", kappa.result[[\"n.obs\"]]))\n\n");
+  //// save result object
+  // read in saveobject variables
+  var saveResults = getValue("saveResults");
+  var saveResultsActive = getValue("saveResults.active");
+  var saveResultsParent = getValue("saveResults.parent");
+  // assign object to chosen environment
+  if(saveResultsActive) {
+    echo(".GlobalEnv$" + saveResults + " <- kappa.result\n");
+  }
 
 }
 
