@@ -1,28 +1,28 @@
 <!DOCTYPE rkplugin >
 <document>
-	<!-- this code was generated using the rkwarddev package.
-			perhaps don't make changes here, but in the rkwarddev script instead! -->
-	<code file="CohensKappa.js" />
-	<help file="CohensKappa.rkh" />
-	<!-- <dependencies>
-			</dependencies> -->
-	<logic>
-		<!-- <convert id="!edit!" sources="!edit!" mode="equals" standard="!edit!" /> -->
-		<!-- <connect governor="!edit!" client="!edit!.enabled" /> -->
-	</logic>
-	<dialog label="Cohen's Kappa">
-		<row id="row_vSSD2D2SWW">
-			<varselector id="vrs_Selectdt" label="Select data" />
-			<column id="clm_vD2D2SWWSN">
-				<varslot id="vrsl_Dtmtrxr2" label="Data (matrix or data.frame, 2*n or p*p)" source="vrs_Selectdt" classes="data.frame matrix" required="true" />
-				<varslot id="vrsl_Wghtmtrx" label="Weight matrix (p*p)" source="vrs_Selectdt" classes="matrix" />
-				<stretch />
-				<frame id="frm_sNN0AA0050">
-					<spinbox label="Number of observations (if data is a square matrix)" id="spn_Nmbrfbsr" min="0" type="integer" />
-					<spinbox label="Alpha value for confidence interval" id="spn_Alphvlfr" initial="0.05" min="0" max="1" />
-				</frame>
-				<saveobject label="Save results to workspace" checkable="true" initial="kappa.result" id="svb_Svrsltst" />
-			</column>
-		</row>
-	</dialog>
+  <!-- this code was generated using the rkwarddev package.
+        perhaps don't make changes here, but in the rkwarddev script instead! -->
+  <code file="CohensKappa.js" />
+  <help file="CohensKappa.rkh" />
+  <!-- <dependencies>
+        </dependencies> -->
+  <logic>
+    <!-- <convert id="!edit!" sources="!edit!" mode="equals" standard="!edit!" /> -->
+    <!-- <connect governor="!edit!.state" client="!edit!.enabled" /> -->
+  </logic>
+  <dialog label="Cohen's Kappa">
+    <row id="row_vSSD2SWWSN">
+      <varselector id="varSelect" label="Select data" />
+      <column id="clm_vD2SWWSN0A">
+        <varslot id="data" label="Data (matrix or data.frame, 2*n or p*p)" source="varSelect" classes="data.frame matrix" required="true" />
+        <varslot id="dataWeight" label="Weight matrix (p*p)" source="varSelect" classes="matrix" />
+        <stretch />
+        <frame id="frm_spN0A00501">
+          <spinbox label="Number of observations (if data is a square matrix)" id="nobs" min="0" type="integer" />
+          <spinbox label="Alpha value for confidence interval" id="alpha" initial="0.05" min="0" max="1" />
+        </frame>
+        <saveobject label="Save results to workspace" checkable="true" initial="kappa.result" id="saveResults" />
+      </column>
+    </row>
+  </dialog>
 </document>
